1/23/2014
- adhere to more strict JSON compliancy in what we send
- be more liberal in accepting "iss" values ending with a trailing slash
- debug printout of id_token payload on validating it
- avoid complaining about aud/azp matching if there's only one value in the aud array
- change author's e-mail address
- remove some unused variables and silence compiler warnings
- add autoconfigure/automake stuff

1/19/2014
- fix registration-endpoint-does-not-exist-in-metadata logic null pointer core dump
- Apache 2.4 fix in oidc_authz.c
- fixes in debug/error printout, spelling, syntax etc.
- apply eclipse code formatting and indentation

1/15/2014
- check for mandatory settings in the configuration
- present user facing text in discovery errors
- use proper (curl) url-encode/url-decode routines
- re-organize metadata handling (incl. validation)
- move stuff around to oidc_util.c, oidc_proto.c and some renaming

1/9/2014
- version 1.0